Actualización del código

--- a/consultar.html
+++ b/consultar.html
@@ -24,6 +24,18 @@
 
     <link rel="icon" href="assets/icons/icon-192.png">
 </head>
+
+<div id="modal-confirmacion" class="modal-overlay">
+  <div class="modal-content">
+    <h2 id="confirm-title">¿Estás seguro?</h2>
+    <p id="confirm-message">Esta acción no se puede deshacer.</p>
+    <div class="modal-buttons">
+      <button id="btn-confirmar-cancelar" class="btn-secondary">Cancelar</button>
+      <button id="btn-confirmar-aceptar" class="btn-danger">Aceptar</button>
+    </div>
+  </div>
+</div>
+
 <body>
     <div id="navbar-placeholder"></div>
 
