Actualización del código

--- a/consultar.html
+++ b/consultar.html
@@ -6,36 +6,34 @@
   <title>Consultar - Sistema de Registro</title>
 
   <script>
-    // Evitar flash de tema oscuro
+    // Evitar “flash” del tema oscuro
     (function () {
       try {
-        const theme = localStorage.getItem("theme");
-        if (theme === "dark") {
-          document.documentElement.classList.add("dark-mode");
-        }
+        const theme = localStorage.getItem('theme');
+        if (theme === 'dark') document.documentElement.classList.add('dark-mode');
       } catch (e) {}
     })();
   </script>
 
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/consultar.css" />
-
   <link rel="icon" href="assets/icons/icon-192.png" />
 </head>
-<body>
-  <div id="navbar-placeholder"></div>
 
-  <!-- Modal de confirmación global -->
-  <div id="modal-confirmacion" class="modal-overlay">
-    <div class="modal-content">
-      <h2 id="confirm-title">¿Estás seguro?</h2>
-      <p id="confirm-message">Esta acción no se puede deshacer.</p>
-      <div class="modal-buttons">
-        <button id="btn-confirmar-cancelar" class="btn-secondary">Cancelar</button>
-        <button id="btn-confirmar-aceptar" class="btn-danger">Aceptar</button>
-      </div>
+<!-- Modal genérico de confirmación -->
+<div id="modal-confirmacion" class="modal-overlay">
+  <div class="modal-content">
+    <h2 id="confirm-title">¿Estás seguro?</h2>
+    <p id="confirm-message">Esta acción no se puede deshacer.</p>
+    <div class="modal-buttons">
+      <button id="btn-confirmar-cancelar" class="btn-secondary">Cancelar</button>
+      <button id="btn-confirmar-aceptar" class="btn-danger">Aceptar</button>
     </div>
   </div>
+</div>
+
+<body>
+  <div id="navbar-placeholder"></div>
 
   <div id="loader" class="loader-wrapper">
     <div class="loader"></div>
@@ -45,35 +43,25 @@
     <div class="container">
       <h1>Centro de Control</h1>
 
-      <!-- Píldora de pestañas centrada -->
+      <!-- Pestañas -->
       <div class="tabs-nav">
         <button class="tab-btn active" data-tab="visitantes">📝 Registros de Visitantes</button>
         <button class="tab-btn" data-tab="descartes">🗑️ Sesiones de Descartes</button>
       </div>
 
-      <!-- TAB: VISITANTES -->
+      <!-- Tab: Visitantes -->
       <div id="visitantes-content" class="tab-content active">
         <div class="controls-area">
           <input type="search" id="search-visitantes" placeholder="Buscar por nombre, apellido o cédula..." />
           <input type="date" id="date-start-visitantes" title="Fecha de inicio" />
           <input type="date" id="date-end-visitantes" title="Fecha de fin" />
           <button id="export-visitantes-btn" class="btn-export">Exportar Excel</button>
-
-          <!-- Controles de selección masiva (alineados a la derecha) -->
-          <div class="bulk-controls">
-            <label class="select-all">
-              <input type="checkbox" id="select-all"/>
-              <span>Seleccionar todo (filtrados)</span>
-            </label>
-            <button id="bulk-delete-btn" class="btn-danger" style="display:none;">Eliminar (0)</button>
-          </div>
         </div>
 
         <div class="table-container">
           <table id="table-visitantes">
             <thead>
               <tr>
-                <th class="select-col" title="Seleccionar"></th>
                 <th>Nombre</th>
                 <th>Apellido</th>
                 <th>Cédula</th>
@@ -88,7 +76,7 @@
         </div>
       </div>
 
-      <!-- TAB: DESCARTES -->
+      <!-- Tab: Descartes -->
       <div id="descartes-content" class="tab-content">
         <div class="controls-area">
           <input type="search" id="search-descartes" placeholder="Buscar por Unidad Administrativa o SIACE..." />
@@ -113,14 +101,16 @@
           </table>
         </div>
       </div>
+
     </div>
   </main>
 
   <!-- Modal: Editar visitante -->
   <div id="modal-editar-visitante" class="modal-overlay">
     <div class="modal-content">
-      <button class="modal-close-btn" aria-label="Cerrar">&times;</button>
+      <button class="modal-close-btn">&times;</button>
       <h2>Editar Visitante</h2>
+
       <div class="modal-form-container">
         <form id="form-editar-visitante" novalidate>
           <label for="edit-nombre">Nombre:</label>
@@ -151,21 +141,25 @@
     </div>
   </div>
 
-  <!-- Modal: Ver equipos de sesión de descarte -->
+  <!-- Modal: Ver equipos de una sesión -->
   <div id="modal-ver-equipos" class="modal-overlay">
     <div class="modal-content">
-      <button class="modal-close-btn" aria-label="Cerrar">&times;</button>
+      <button class="modal-close-btn">&times;</button>
       <h2 id="modal-equipos-title">Equipos de la Sesión #0</h2>
       <div class="modal-list-container"></div>
     </div>
   </div>
 
+  <!-- Toast -->
   <div id="toast-notification" class="toast">
     <span id="toast-message"></span>
   </div>
 
+  <!-- Libs -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="js/libs/xlsx.full.min.js"></script>
+
+  <!-- App -->
   <script src="js/common.js" defer></script>
   <script src="js/consultar.js" defer></script>
 </body>
