--- a/consultar.html
+++ b/consultar.html
@@ -20,18 +20,6 @@
   <link rel="icon" href="assets/icons/icon-192.png" />
 </head>
 
-<!-- Modal genérico de confirmación -->
-<div id="modal-confirmacion" class="modal-overlay">
-  <div class="modal-content">
-    <h2 id="confirm-title">¿Estás seguro?</h2>
-    <p id="confirm-message">Esta acción no se puede deshacer.</p>
-    <div class="modal-buttons">
-      <button id="btn-confirmar-cancelar" class="btn-secondary">Cancelar</button>
-      <button id="btn-confirmar-aceptar" class="btn-danger">Aceptar</button>
-    </div>
-  </div>
-</div>
-
 <body>
   <div id="navbar-placeholder"></div>
 
@@ -91,7 +79,7 @@
             <table id="table-descartes">
               <thead>
                 <tr>
-                  <!-- Sin id/created_at -->
+                  <!-- Sin mostrar id/created_at -->
                   <th>Unidad Administrativa</th>
                   <th>Código SIACE</th>
                   <th>Fecha</th>
@@ -109,19 +97,22 @@
         <!-- Detalle de una sesión (oculto inicialmente) -->
         <section id="sesion-detalle" style="display:none;">
           <div class="detalle-header">
-            <button id="btn-volver-sesiones" class="btn-secondary">← Volver a Sesiones</button>
+            <button id="btn-volver-sesiones" class="btn-secondary" type="button">← Volver a Sesiones</button>
             <h2 id="detalle-titulo">Sesión</h2>
             <div class="detalle-meta">
-              <span><strong>Unidad:</strong> <span id="detalle-unidad"></span></span>
-              <span><strong>SIACE:</strong> <span id="detalle-siace"></span></span>
-              <span><strong>Fecha:</strong> <span id="detalle-fecha"></span></span>
-              <span><strong>Técnico:</strong> <span id="detalle-tecnico"></span></span>
+              <span><strong>Unidad:</strong> <span id="detalle-unidad">—</span></span>
+              <span><strong>SIACE:</strong> <span id="detalle-siace">—</span></span>
+              <span><strong>Fecha:</strong> <span id="detalle-fecha">—</span></span>
+              <span><strong>Técnico:</strong> <span id="detalle-tecnico">—</span></span>
             </div>
             <p id="detalle-observacion" class="detalle-observacion"></p>
           </div>
 
           <div class="controls-area">
-            <input type="search" id="search-equipos" placeholder="Buscar por descripción, marca, modelo, serie o marbete..." />
+            <input
+              type="search"
+              id="search-equipos"
+              placeholder="Buscar por descripción, marca, modelo, serie o marbete..." />
           </div>
 
           <div class="table-container">
@@ -146,6 +137,18 @@
       </div>
     </div>
   </main>
+
+  <!-- Modal genérico de confirmación -->
+  <div id="modal-confirmacion" class="modal-overlay">
+    <div class="modal-content">
+      <h2 id="confirm-title">¿Estás seguro?</h2>
+      <p id="confirm-message">Esta acción no se puede deshacer.</p>
+      <div class="modal-buttons">
+        <button id="btn-confirmar-cancelar" class="btn-secondary">Cancelar</button>
+        <button id="btn-confirmar-aceptar" class="btn-danger">Aceptar</button>
+      </div>
+    </div>
+  </div>
 
   <!-- Modal: Editar visitante -->
   <div id="modal-editar-visitante" class="modal-overlay">
