--- a/consultar.html
+++ b/consultar.html
@@ -122,7 +122,7 @@
               id="search-equipos"
               placeholder="Buscar por descripción, marca, modelo, serie o marbete..." />
             <!-- Nuevo botón para añadir equipo -->
-            <button id="btn-agregar-equipo" class="btn-principal" type="button">➕ Añadir Equipo</button>
+            <button id="btn-agregar-equipo" class="btn-principal" type="button">Añadir Equipo</button>
           </div>
 
           <div class="table-container">
