--- a/descartes.html
+++ b/descartes.html
@@ -37,7 +37,7 @@
 
             <div id="inicio-descarte-section" class="content-center">
                 <button id="btn-iniciar-descarte" class="btn-iniciar">
-                    ➕ Iniciar Nuevo Descarte
+                    Iniciar Nuevo Descarte
                 </button>
             </div>
 
