--- a/consultar.html
+++ b/consultar.html
@@ -83,8 +83,21 @@
             <button id="export-descartes-btn" class="btn-export">Exportar Excel</button>
           </div>
 
-          <div id="sesiones-cards-container">
-            <!-- Aquí se cargarán dinámicamente las tarjetas de sesiones -->
+          <div class="table-container">
+            <table id="table-descartes">
+              <thead>
+                <tr>
+                  <th>Unidad Administrativa</th>
+                  <th>Código SIACE</th>
+                  <th>Fecha</th>
+                  <th>Técnico</th>
+                  <th>Observación</th>
+                  <th>Nº Equipos</th>
+                  <th>Acciones</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
           </div>
         </section>
 
