--- a/consultar - copia.html
+++ b/consultar - copia.html
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-            <!-- Tab: Descartes (Lista de sesiones) -->
+      <!-- Tab: Descartes (Lista de sesiones) -->
       <div id="descartes-content" class="tab-content">
         <!-- Lista de sesiones -->
         <section id="sesiones-lista">
@@ -104,7 +104,6 @@
         <!-- Detalle de una sesión (oculto inicialmente) -->
         <section id="sesion-detalle" style="display:none;">
           <div class="detalle-header">
-            <!-- Botón de volver: en móvil se verá más compacto -->
             <button id="btn-volver-sesiones" class="btn-secondary btn-volver" type="button">← Volver a Sesiones</button>
             <h2 id="detalle-titulo">Sesión</h2>
             <div class="detalle-meta">
@@ -121,7 +120,7 @@
               type="search"
               id="search-equipos"
               placeholder="Buscar por descripción, marca, modelo, serie o marbete..." />
-            <!-- Botón Añadir Equipo se adapta a móvil -->
+            <!-- Botón para añadir equipo ahora ancho completo en móvil -->
             <button id="btn-agregar-equipo" class="btn-principal btn-anadir-equipo" type="button">Añadir Equipo</button>
           </div>
 
@@ -148,7 +147,7 @@
     </div>
   </main>
 
-    <!-- Modal genérico de confirmación -->
+  <!-- Modal genérico de confirmación -->
   <div id="modal-confirmacion" class="modal-overlay">
     <div class="modal-content">
       <h2 id="confirm-title">¿Estás seguro?</h2>
@@ -288,7 +287,7 @@
     </div>
   </div>
 
-    <!-- Toast -->
+  <!-- Toast -->
   <div id="toast-notification" class="toast">
     <span id="toast-message"></span>
   </div>
