--- a/consultar.html
+++ b/consultar.html
@@ -119,7 +119,7 @@
               <span><strong>SIACE:</strong> <span id="detalle-siace">—</span></span>
               <span><strong>Fecha:</strong> <span id="detalle-fecha">—</span></span>
               <span><strong>Técnico:</strong> <span id="detalle-tecnico">—</span></span>
-              <p id="detalle-observacion" class="detalle-observacion"></p>
+              <span id="detalle-observacion" class="detalle-observacion"></span>
             </div>
           </div>
 
