--- a/consultar.html
+++ b/consultar.html
@@ -119,7 +119,7 @@
               <span><strong>SIACE:</strong> <span id="detalle-siace">—</span></span>
               <span><strong>Fecha:</strong> <span id="detalle-fecha">—</span></span>
               <span><strong>Técnico:</strong> <span id="detalle-tecnico">—</span></span>
-              <span id="detalle-observacion" class="detalle-observacion"></span>
+              <div id="detalle-observacion" class="detalle-observacion"></div>
             </div>
           </div>
 
