--- a/consultar.html
+++ b/consultar.html
@@ -119,8 +119,10 @@
               <span><strong>SIACE:</strong> <span id="detalle-siace">—</span></span>
               <span><strong>Fecha:</strong> <span id="detalle-fecha">—</span></span>
               <span><strong>Técnico:</strong> <span id="detalle-tecnico">—</span></span>
-              <div id="detalle-observacion" class="detalle-observacion"></div>
             </div>
+
+            <!-- 🔥 Observación aparte, siempre debajo -->
+            <div id="detalle-observacion" class="detalle-observacion"></div>
           </div>
 
           <div class="controls-area">
