Secure Supabase config and harden descartes flow

--- a/descartes.html
+++ b/descartes.html
@@ -198,7 +198,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    
+
+    <script src="js/config.js"></script>
     <script src="js/scanbot/ScanbotSDK.min.js"></script>
     <script src="js/scanbot/ScanbotSDK.ui2.min.js"></script>
     
