--- a/consultar - copia.html
+++ b/consultar - copia.html
@@ -297,6 +297,7 @@
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
   <!-- App -->
+  <script src="js/config.js"></script>
   <script src="js/common.js" defer></script>
   <script src="js/consultar.js" defer></script>
 
