--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
     <script src="js/scanbot/ScanbotSDK.min.js"></script>
     <script src="js/scanbot/ScanbotSDK.ui2.min.js"></script>
     
+    <script src="js/config.js"></script>
     <script src="js/common.js" defer></script>
     <script src="js/script.js" defer></script>
 </body>
