--- a/inicio.html
+++ b/inicio.html
@@ -54,6 +54,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="js/config.js"></script>
     <script src="js/common.js"></script>
     <script src="js/inicio.js"></script>
 </body>
