--- a/consultar.html
+++ b/consultar.html
@@ -47,6 +47,7 @@
           <div class="date-field">
             <input type="date" id="date-end-visitantes" placeholder="dd/mm/aaaa" title="Fecha de fin" />
           </div>
+          <span id="visitantes-total" class="count-pill" aria-live="polite">0 registros</span>
           <button id="export-visitantes-btn" class="btn-export">Exportar Excel</button>
         </div>
 
@@ -80,6 +81,7 @@
             <div class="date-field">
               <input type="date" id="date-end-descartes" placeholder="dd/mm/aaaa" title="Fecha de fin" />
             </div>
+            <span id="sesiones-total" class="count-pill" aria-live="polite">0 sesiones</span>
             <button id="export-descartes-btn" class="btn-export">Exportar Excel</button>
           </div>
 
@@ -114,7 +116,7 @@
 
             <!-- Botón toggle SOLO para móvil -->
             <button id="btn-toggle-detalles" class="btn-secondary btn-toggle" type="button">
-              Ver más detalles ⌄
+              Ver más detalles ▼
             </button>
 
             <!-- Bloque de detalles extra -->
@@ -130,6 +132,7 @@
               type="search"
               id="search-equipos"
               placeholder="Buscar por descripción, marca, modelo, serie o marbete..." />
+            <span id="equipos-total" class="count-pill" aria-live="polite">0 equipos</span>
             <!-- Botón Añadir Equipo se adapta a móvil -->
             <button id="btn-agregar-equipo" class="btn-principal btn-anadir-equipo" type="button">Añadir Equipo</button>
           </div>
@@ -291,6 +294,44 @@
           <div class="modal-buttons">
             <button type="button" id="btn-agregar-equipo-cancelar" class="btn-secondary">Cancelar</button>
             <button type="submit" class="btn-principal">Añadir</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal: Editar sesión de descarte -->
+  <div id="modal-editar-sesion" class="modal-overlay">
+    <div class="modal-content">
+      <button id="btn-cerrar-modal-editar-sesion" class="modal-close-btn">&times;</button>
+      <h2>Editar Sesión</h2>
+      <div class="modal-form-container">
+        <form id="form-editar-sesion" novalidate>
+          <div class="form-grid">
+            <div class="form-group">
+              <label for="edit-sesion-unidad">Unidad Administrativa:</label>
+              <input type="text" id="edit-sesion-unidad" required />
+            </div>
+            <div class="form-group">
+              <label for="edit-sesion-siace">Código SIACE:</label>
+              <input type="text" id="edit-sesion-siace" />
+            </div>
+            <div class="form-group">
+              <label for="edit-sesion-fecha">Fecha:</label>
+              <input type="date" id="edit-sesion-fecha" required />
+            </div>
+            <div class="form-group">
+              <label for="edit-sesion-tecnico">Técnico Encargado:</label>
+              <input type="text" id="edit-sesion-tecnico" />
+            </div>
+          </div>
+          <div class="form-group-full">
+            <label for="edit-sesion-observacion">Observación:</label>
+            <textarea id="edit-sesion-observacion" rows="3"></textarea>
+          </div>
+          <div class="modal-buttons">
+            <button type="button" id="btn-editar-sesion-cancelar" class="btn-secondary modal-cancel-btn">Cancelar</button>
+            <button type="submit" class="btn-principal">Guardar Cambios</button>
           </div>
         </form>
       </div>
