Unifica estilo de botones y corrige icono de detalles

--- a/consultar.html
+++ b/consultar.html
@@ -116,7 +116,7 @@
 
             <!-- Botón toggle SOLO para móvil -->
             <button id="btn-toggle-detalles" class="btn-secondary btn-toggle" type="button">
-              Ver más detalles ⌄
+              Ver más detalles ▼
             </button>
 
             <!-- Bloque de detalles extra -->
