Improve mobile login flow layout

--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
                         <button type="button" id="next-btn" class="btn-primary">Siguiente</button>
                     </div>
 
-                    <div id="step-password" style="display: none;">
+                    <div id="step-password" class="is-hidden">
                         <label for="password">Contraseña:</label>
                         <input type="password" id="password" required>
                         <div class="form-buttons">
