Ajusta centrado en pantallas móviles para inicio y descartes

--- a/inicio.html
+++ b/inicio.html
@@ -24,7 +24,7 @@
 
     <link rel="icon" href="assets/icons/icon-192.png">
 </head>
-<body>
+<body class="page-inicio">
     <div id="navbar-placeholder"></div>
 
     <div id="loader" class="loader-wrapper">
