--- a/inicio.html
+++ b/inicio.html
@@ -49,6 +49,10 @@
                     <h2>📊 Consultar</h2>
                     <p>Buscar, editar y ver todos los registros.</p>
                 </a>
+                <a href="inventario.html" class="card">
+                    <h2>Inventario de IPs</h2>
+                    <p>Administración de direcciones IPs.</p>
+                </a>
             </div>
         </div>
     </main>
