Add plus icon to inventory button and align DNS fields

--- a/inventario.html
+++ b/inventario.html
@@ -96,8 +96,8 @@
                 <th scope="col" data-sort="ip">Dirección IP</th>
                 <th scope="col" data-sort="mascara">Máscara</th>
                 <th scope="col" data-sort="gateway">Gateway</th>
-                <th scope="col" data-sort="dns_1">DNS 1</th>
-                <th scope="col" data-sort="dns_2">DNS 2</th>
+                <th scope="col" data-sort="dns1">DNS 1</th>
+                <th scope="col" data-sort="dns2">DNS 2</th>
                 <th scope="col" data-sort="estado">Estado</th>
                 <th scope="col" class="acciones">Acciones</th>
               </tr>
@@ -169,11 +169,11 @@
             </div>
             <div class="form-group">
               <label for="input-dns1">DNS 1</label>
-              <input id="input-dns1" name="dns_1" type="text" />
+              <input id="input-dns1" name="dns1" type="text" />
             </div>
             <div class="form-group">
               <label for="input-dns2">DNS 2</label>
-              <input id="input-dns2" name="dns_2" type="text" />
+              <input id="input-dns2" name="dns2" type="text" />
             </div>
             <div class="form-group form-group-full">
               <label for="input-notas">Notas</label>
