Refina vista de inventario con tarjetas compactas y filas expandibles

--- a/inventario.html
+++ b/inventario.html
@@ -36,19 +36,19 @@
       </header>
 
       <section class="stats-overview" aria-live="polite">
-        <article class="stat-card">
+        <article class="stat-card stat-card--total">
           <span class="stat-label">Total de IPs</span>
           <span id="stat-total" class="stat-value">0</span>
         </article>
-        <article class="stat-card">
+        <article class="stat-card stat-card--libre">
           <span class="stat-label">Libres</span>
           <span id="stat-libres" class="stat-value">0</span>
         </article>
-        <article class="stat-card">
+        <article class="stat-card stat-card--asignada">
           <span class="stat-label">Asignadas</span>
           <span id="stat-asignadas" class="stat-value">0</span>
         </article>
-        <article class="stat-card">
+        <article class="stat-card stat-card--revision">
           <span class="stat-label">En revisión</span>
           <span id="stat-revision" class="stat-value">0</span>
         </article>
@@ -94,10 +94,6 @@
                 <th scope="col" data-sort="tipo">Tipo</th>
                 <th scope="col" data-sort="departamento">Departamento</th>
                 <th scope="col" data-sort="ip">Dirección IP</th>
-                <th scope="col" data-sort="mascara">Máscara</th>
-                <th scope="col" data-sort="gateway">Gateway</th>
-                <th scope="col" data-sort="dns1">DNS 1</th>
-                <th scope="col" data-sort="dns2">DNS 2</th>
                 <th scope="col" data-sort="estado">Estado</th>
                 <th scope="col" class="acciones">Acciones</th>
               </tr>
