Ajustar estilo y limpieza de campos en inventario de IPs

--- a/inicio.html
+++ b/inicio.html
@@ -50,7 +50,7 @@
                     <p>Buscar, editar y ver todos los registros.</p>
                 </a>
                 <a href="inventario.html" class="card">
-                    <h2>Inventario de IPs</h2>
+                    <h2>🖧 Inventario de IPs</h2>
                     <p>Administración de direcciones IPs.</p>
                 </a>
             </div>
