--- a/login.html
+++ b/login.html
@@ -33,7 +33,10 @@
     </div>
 
     <div class="header-buttons">
-        <button id="theme-toggle" class="theme-btn" title="Cambiar Tema">🌙</button>
+        <button id="theme-toggle" class="theme-btn" title="Cambiar Tema" aria-label="Cambiar a tema oscuro">
+            <span class="icon icon-theme-dark icon-dark" aria-hidden="true"></span>
+            <span class="icon icon-theme-light icon-light" aria-hidden="true"></span>
+        </button>
     </div>
 
     <main class="login-page-main" id="login-main-content" style="visibility: hidden;">
